<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidarbot_aruco</name>
  <version>0.0.0</version>
  <description>Lidarbot aruco package</description>
  <maintainer email="noobinventor@tutamail.com">Chinedu Amadi</maintainer>
  <license>BSD 3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>usb-cam</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
