<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidarbot_base</name>
  <version>0.0.0</version>
  <description>Lidarbot base motor driver package</description>
  <maintainer email="chineduam@tuta.io">Chinedu Amadi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->
  
  <!-- TODO: -->
  <!-- <test_depend>ament_add_gmock</test_depend>
  <test_depend>hardware_interface</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
