<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidarbot_bringup</name>
  <version>0.0.0</version>
  <description>Lidarbot bringup package</description>
  <maintainer email="chineduam@tuta.io">Chinedu Amadi</maintainer>
  <license>CC-BY-SA-4.0 license </license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
