<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidarbot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Lidarbot gazebo package</description>
  <maintainer email="chineduam@tuta.io">Chinedu Amadi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend> -->
  <exec_depend>lidarbot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
