<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidarbot_teleop</name>
  <version>0.0.0</version>
  <description>Lidarbot teleop package</description>
  <maintainer email="noobinventor@tutamail.com">Chinedu Amadi</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>joy</depend>
  <depend>joy_tester</depend>
  <depend>teleop_twist_joy</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
